@@ -1,7 +1,7 @@
 #!/pro/bin/perl
 
 # csv-check: Check validity of CSV file and report
-#	   (m)'09 [12 Oct 2009] Copyright H.M.Brand 2007-2009
+#	   (m)'09 [12 Oct 2009] Copyright H.M.Brand 2007-2010
 
 # This code requires the defined-or feature and PerlIO
 
