@@ -1,3 +1,12 @@
+2010-02-15 0.71 - H.Merijn Brand   <h.m.brand@xs4all.nl>
+
+    * Upped copyright to 2010
+    * Prevent double encoding: make Text::CSV_XS streams behave just
+      like perl would (thanks ikegami for the test cases)
+    * Text::CSV_XS->error_diag () in void context now warns instead of
+      doing nothing
+    * auto_diag also used for new () itself
+
 2009-12-02 0.70 - H.Merijn Brand   <h.m.brand@xs4all.nl>
 
     * Add quote_space attribute
